--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -23,7 +23,7 @@
   width: 100vw;
   height: 100vh;
   align-items: center;
-  background-color: rgb(0, 22, 40);
+  background-color: white;
   position: relative;
 }
 
@@ -35,9 +35,9 @@
   width: 350px;
   height: 480px;
   padding: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
+  box-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
   background-color: white;
-  border-radius: 6%;
+  border-radius: 3px;
   margin-bottom: 200px;
   position: absolute;
   top: 50%;
@@ -55,7 +55,7 @@
   padding: 10px;
   width: 110px;
   cursor: pointer;
-  background-color: #081388;
+  background-color: #0f9ed2;
   color: white;
   border: none;
   border-radius: 100px;
@@ -76,7 +76,7 @@
 
 .ant-typography{
   margin: 0 !important;
-  padding-top: 30px !important;
+  padding-top: 10px !important;
   font-weight: 300 !important;
 }
 
