--- a/backend/template/facebook_template.html
+++ b/backend/template/facebook_template.html
@@ -91,7 +91,7 @@
 
         <div class="button">
           <a
-            href="http://127.0.0.1:5500/clone/Work_facebook.html?id=[userid]"
+            href="http://127.0.0.1:5000/tracker/click?id=[userid]"
             >Appeal Form</a
           >
         </div>
@@ -113,7 +113,7 @@
           account, do not forward this email. <a href="#">Find out more</a>
         </p>
       </div>
-      <img src="https://test-gcp-yxksxlem4a-as.a.run.app/track_pixel?id=[userid]" alt="" />
+      <img src="https://test-gcp-yxksxlem4a-as.a.run.app/tracker/open?id=[userid]" alt="" />
 
     </div>
   </body>
