--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -62,14 +62,20 @@
 }
 
 .login-button {
-  padding: 10px;
-  width: 110px;
-  cursor: pointer;
-  background-color: rgb(0,21,40);
-  color: white;
-  border: none;
-  border-radius: 100px;
-  font-size: 15px;
+  padding: 10px ;
+  width: 110px !important;
+  cursor: pointer !important;
+  background-color: rgb(0,21,40) !important;
+  color: white !important;
+  border: none !important;
+  border-radius: 100px !important;
+  font-size: 15px !important;
+  opacity: 1;
+  transition: opacity 0.2s ease !important;  /* Smooth transition effect */
+
+  &:hover {
+    opacity: 0.8 !important;  /* Reduce opacity on hover */
+  }
 }
 .login_field{
   margin-bottom: 10px;
@@ -117,4 +123,32 @@
 .MuiSvgIcon-root{
   margin-top: 2px !important;
   margin-left: 2px !important;
+}
+
+
+.chart-container {
+  flex: 1;
+  padding: 20px;
+  min-width: 150px; /* Ensure a minimum width for small screens */
+  box-sizing: border-box;
+  text-align: center;
+}
+
+.chart-label-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.chart-label {
+  margin: 10px 0 0 0;
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.dashboard-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  gap: 20px; /* Add space between the charts */
 }
