--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -64,6 +64,8 @@
 .login-button {
   padding: 10px ;
   width: 110px !important;
+  height: 38.25px !important;
+
   cursor: pointer !important;
   background-color: rgb(0,21,40) !important;
   color: white !important;
@@ -76,7 +78,13 @@
   &:hover {
     opacity: 0.8 !important;  /* Reduce opacity on hover */
   }
+  
 }
+.hidden-text {
+  visibility: hidden;
+}
+
+
 .login_field{
   margin-bottom: 10px;
 }
